--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="col-md-4">
           <div class="card h-100">
             <div class="card-body">
-              <img src="image copy 3.png" alt="img" id="incomeimg">
+              <img src="image copy3.jpg" alt="img" id="incomeimg">
               <h5 class="card-title">Income Tracker</h5>
               <p class="card-text">Forecast financial scenarios and monitor progress toward your goals.</p>
               <a href="income_index.html" class="btn-primary" id="button" target="_blank">Click Here</a>
@@ -48,7 +48,7 @@
         <div class="col-md-4">
           <div class="card h-100">
             <div class="card-body">
-              <img src="image copy 2.png" alt="img" id="incomeimg">
+              <img src="image copy2.jpg" alt="img" id="incomeimg">
               <h5 class="card-title">Real-Time Trading Suggestions</h5>
               <p class="card-text">Market-based insights and trading advice tailored to your risk profile.</p>
               <a href="trading.html" class="btn-primary" id="button" target="_blank">Click Here</a>
@@ -58,7 +58,7 @@
         <div class="col-md-4">
           <div class="card h-100">
             <div class="card-body">
-              <img src="image copy.png" alt="img" id="incomeimg">
+              <img src="image copy.jpg" alt="img" id="incomeimg">
               <h5 class="card-title">AI-Powered Financial Assistant</h5>
               <p class="card-text">Personalised recommendations and alerts to optimise your spending and investments.</p>
               <a href="ai.html" class="btn-primary" id="button" target="_blank">Click Here</a>
@@ -72,7 +72,7 @@
     <div class="container text-center">
       <h2 class="mb-4">Interactive Dashboard</h2>
       <p>Visualise all your financial data in one place.</p>
-      <img src="image.png" alt="Dashboard Preview" class="img-fluid rounded" id="dashimg">
+      <img src="image.jpg" alt="Dashboard Preview" class="img-fluid rounded" id="dashimg">
     </div>
   </section>
   <section id="ai-assistant" class="py-5">
@@ -86,6 +86,6 @@
     <p>&copy; 2024 ExpensePro. All rights reserved.</p>
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="script_mini.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
